# grove-sync

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  SYSTEM.md  pyproject.toml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: pi.manifest.json  speckit.manifest.json
config/: consumer.yaml  producer.yaml
docs/architecture/: channel-config-ui.md  sync-pipeline.md  tiered-sync.md
schema-migration/: 01_schema.sql  02_functions.sql  03_policies.sql  04_data_small_tables.sql  README.md  export_import_videos.py  generate_data_sql.py  iam.md
scripts/: grove-sync-job.ps1  install-task.ps1  reconcile_r2_storage.py  uninstall-task.ps1
specs/001-docs-architecture-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docs-architecture-sync/checklists/: requirements.md
specs/001-docs-architecture-sync/contracts/: cli-plan.md  cli-process.md
src/: config.py  models.py  scoring.py  sync_consumer.py
src/commands/: calibrate.py  plan.py  process.py  sync.py
src/services/: db.py  hls.py  storage.py  video_fetcher.py  youtube.py
tests/: test_config_class.py  test_consumer.py  test_consumer_integration.py  test_defensive.py  test_producer.py  test_producer_integration.py  test_scoring_class.py
tests/test_commands/: test_calibrate.py  test_plan.py  test_process.py  test_process_channel_flag.py  test_sync.py
tests/test_services/: test_db.py  test_hls.py  test_storage.py  test_video_fetcher.py  test_video_scorer.py  test_youtube.py
